# sdkcord

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml  get_channel.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
examples/: basic.rs  custom_activity.rs  message_logger.rs  run_requests.rs  subscription_basic.rs
examples/common/: mod.rs
src/: actors.rs  client.rs  codec.rs  config.rs  conn.rs  ipc.rs  lib.rs  main.rs  oauth2.rs  opcode.rs  pool.rs
src/actor/: mod.rs
src/actor/ipc/: reader.rs  writer.rs
src/actors/: ipc.rs
src/codec/: decoder.rs  encoder.rs  mod.rs
src/conn/: mod.rs  unix.rs  windows.rs
src/convert/: deserializer.rs  mod.rs
src/ipc/: reader.rs  writer.rs
src/payload/: activity.rs  auth.rs  channel.rs  device.rs  error.rs  guild.rs  macros.rs  message.rs  mod.rs  ready.rs  request.rs  request_builder.rs  response.rs  speaking.rs  voice.rs
src/payload/activity/: close_activity_request.rs  send_activity_join_invite.rs  set_activity.rs
src/payload/args/: activity.rs  auth.rs  channel.rs  guild.rs  mod.rs  speaking.rs  voice.rs
src/payload/common/: activity.rs  application.rs  attachment.rs  channel.rs  device.rs  embed.rs  guild.rs  level.rs  message.rs  mod.rs  oauth2.rs  opcode.rs  pan.rs  team.rs  user.rs  voice.rs
src/payload/reqres/: activity.rs  auth.rs  channel.rs  device.rs  guild.rs  message.rs  mod.rs  notification.rs  voice.rs
src/payload/request/: auth.rs  channel.rs  device.rs  guild.rs  macros.rs  mod.rs  voice.rs
src/payload/request/activity/: close_activity_request.rs  mod.rs  send_activity_join_invite.rs  set_activity.rs
src/payload/request/voice/: channel.rs  mod.rs  settings.rs
src/payload/request/voice/settings/: get_voice_settings.rs  set_user_voice_settings.rs  set_voice_settings.rs
src/payload/subscription/: activity.rs  channel.rs  guild.rs  macros.rs  message.rs  mod.rs  notification.rs  speaking.rs  voice.rs
src/payload/types/: activity.rs  channel.rs  mod.rs  oauth2.rs  pan.rs  voice.rs
src/payload/voice/: channel.rs  mod.rs
src/payload/voice/settings/: get_voice_settings.rs  mod.rs  set_user_voice_settings.rs  set_voice_settings.rs
tests/: test_authenticate_call.rs
tests/common/: mod.rs
