[package]
name = "sdkcord"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
thiserror = { version = "2.0.4" }
bytes = { version = "1.7.1", features = ["serde"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = { version = "0.3.30" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
paste = { version = "1.0.15" }
bon = { version = "3.2.0" }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
anyhow = { version = "1.0.86" }
reqwest = { version = "0.12.7", features = ["json"] }
serde_urlencoded = { version = "0.7.1" }
ordered-float = { version = "4.2.2", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }
serde_repr = { version = "0.1.19" }
serde_with = { version = "3.10.0" }
async-channel = { version = "2.3.1" }

[dependencies.tokio]
version = "1.39.3"
features = ["rt-multi-thread", "net", "sync", "macros", "io-util"]

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
lazy_static = { version = "1.5.0" }

[features]
default = []
untested = []
